@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.inc,v 1.6 2002/01/02 04:52:55 briggs Exp $
+#	$NetBSD: Makefile.inc,v 1.7 2004/05/10 22:16:42 thorpej Exp $
 #	@(#)Makefile.inc	8.1 (Berkeley) 6/4/93
 
 # gmon sources
@@ -10,6 +10,9 @@ SRCS+=	gmon.c mcount.c
 MAN+=	moncontrol.3
 MLINKS+=moncontrol.3 monstartup.3
 
-# mcount cannot be compiled with profiling
+# mcount and gmon cannot be compiled with profiling
 mcount.po: mcount.o
 	cp mcount.o mcount.po
+
+gmon.po: gmon.o
+	cp gmon.o gmon.po
